mixer/test/client/dynamic_attribute/config.conf.20199.yaml

admin:
  access_log_path: /tmp/envoy-access.log
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 20199
node:
  id: id
  cluster: unknown
dynamic_resources:
  ads_config:
    api_type: GRPC
    grpc_services:
      envoy_grpc:
        cluster_name: xds
static_resources:
  clusters:
  - name: xds
    http2_protocol_options: {}
    connect_timeout: 5s
    type: STATIC
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 20202
  - name: backend
    connect_timeout: 5s
    type: EDS
    eds_cluster_config: { eds_config: { ads: {}}}
  - name: mixer_server
    http2_protocol_options: {}
    connect_timeout: 5s
    type: STATIC
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 20200
  listeners:
  - name: server
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 20197
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: AUTO
          stat_prefix: inbound_http
          access_log:
          - name: envoy.file_access_log
            config:
              path: /tmp/envoy-access.log
          http_filters:
          - name: mixer
            config: {"mixer_attributes":{"attributes":{"mesh1.ip":{"bytes_value":"AQEBAQ=="},"target.namespace":{"string_value":"XYZ222"},"target.uid":{"string_value":"POD222"}}}}
          - name: envoy.router
          route_config:
            name: backend
            virtual_hosts:
            - name: backend
              domains: ["*"]
              routes:
              - match:
                  prefix: /
                route:
                  cluster: backend
                  timeout: 0s
                per_filter_config:
                  mixer: {"mixer_attributes":{"attributes":{"mesh2.ip":{"bytes_value":"AAAAAAAAAAAAAP//zJi9dA=="},"target.name":{"string_value":"target-name"},"target.user":{"string_value":"target-user"}}}}
  - name: tcp_server
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 20198
    filter_chains:
    - filters:
      - name: mixer
        config: {"mixer_attributes":{"attributes":{"mesh1.ip":{"bytes_value":"AQEBAQ=="},"target.namespace":{"string_value":"XYZ222"},"target.uid":{"string_value":"POD222"}}}}
      - name: envoy.tcp_proxy
        config:
          stat_prefix: inbound_tcp
          cluster: backend
